<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">

        <!--  Header -->
        <include layout="@layout/header_logo_bar"></include>

        <!-- Footer -->
        <include layout="@layout/footer_logo_bar"></include>

        <!-- Login Form -->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:layout_below="@id/header"
            android:layout_marginTop="40dp">

            <!--  Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email_editText_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:layout_marginBottom="20dip"
                    android:singleLine="true"
                    android:hint="@string/email"
                    android:textSize="20sp"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <!--  Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password_editText_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:textSize="20sp"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Login button -->
            <android.support.design.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dip"
                android:text="@string/login" />

            <!-- Link to Reset Password -->
            <TextView
                android:id="@+id/link_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dip"
                android:layout_marginBottom="10dip"
                android:layout_gravity="center"
                android:text="@string/forgot_password_link"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/colorRegularTextDark"/>

            <!-- Link to Registration Screen -->
            <TextView
                android:id="@+id/link_to_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="60dip"
                android:layout_gravity="center"
                android:text="@string/register_link"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/colorRegularTextDark"/>

        </LinearLayout>
        <!-- Login Form Ends -->

    </RelativeLayout>

</ScrollView>