<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.ResetPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">

        <!--  Header -->
        <include layout="@layout/header_logo_bar"></include>

        <!-- Footer -->
        <include layout="@layout/footer_logo_bar"></include>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:layout_below="@id/header"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/title_textView_resetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/forgotPassword"
                android:textColor="@color/colorRegularTextDark"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/message_textView_resetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/forgotPassword_label"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="@color/colorRegularTextLight"
                android:layout_gravity="center_horizontal"/>

            <!--  Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email_editText_resetPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_marginBottom="25dp"
                    android:singleLine="true"
                    android:hint="@string/email"
                    android:textSize="20sp"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <!-- Reset Password Button -->
            <android.support.design.button.MaterialButton
                android:id="@+id/btn_resetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/resetPassword"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="60dip"/>
        </LinearLayout>

    </RelativeLayout>


</ScrollView>